# fungi

./: CMakeLists.txt  README.md  init.sh  run.sh
src/: main.cpp
src/core/: essentials.hpp
src/core/input/: input.cpp  input.hpp
src/core/mouse/: mouse.cpp  mouse.hpp
src/game/: manager.hpp  models.hpp  player.hpp
src/physics/: box.hpp  physics.cpp  physics.hpp
src/renderer/: camera.hpp  projection.cpp  projection.hpp  render.cpp  render.hpp
src/renderer/shaders/: frag.glsl  fragTri.glsl  vert.glsl  vertTri.glsl
